@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkWinMenu.c,v 1.16 2001/10/12 13:30:32 tmh Exp $
+ * RCS: @(#) $Id: tkWinMenu.c,v 1.17 2001/11/27 04:36:18 drh Exp $
  */
 
 #define OEMRESOURCE
@@ -1077,6 +1077,12 @@ TkWinHandleMenuEvent(phwnd, pMessage, pwParam, plParam, plResult)
 			TkActivateMenuEntry(menuPtr, mePtr->index);
 		    } else {
 			TkActivateMenuEntry(menuPtr, -1);
+		    }
+		} else {
+		    if (itemPtr->itemState & ODS_SELECTED) {
+			mePtr->entryFlags |= ENTRY_PLATFORM_FLAG1;
+		    } else {
+			mePtr->entryFlags &= ~ENTRY_PLATFORM_FLAG1;
 		    }
 		}
 
@@ -2408,7 +2414,8 @@ DrawMenuEntryBackground(
     int width,				/* width of rectangle to draw */
     int height)				/* height of rectangle to draw */
 {
-    if (mePtr->state == ENTRY_ACTIVE) {
+    if (mePtr->state == ENTRY_ACTIVE 
+		|| (mePtr->entryFlags & ENTRY_PLATFORM_FLAG1)!=0 ) {
 	bgBorder = activeBorder;
     }
     Tk_Fill3DRectangle(menuPtr->tkwin, d, bgBorder,
